fix horizontal scroll issue for mobile

--- a/assets/k-how-it-works-styles.css
+++ b/assets/k-how-it-works-styles.css
@@ -8,6 +8,10 @@
   gap: 10px;
   margin-bottom: 50px;
 }
+.how-it-works .slide-image-box {
+  width: 50%;
+  margin: 0 auto;
+}
 @media(max-width: 786px) {
   .how-it-works .contents {
     flex-direction: column;
